[tool.poetry]
name = "sqlalchemist"
version = "0.2.0"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
SQLalchemy = "^1.3"
alembic = "^1.0"
"ruamel.yaml" = "^0.16.1"
munch = "^2.3"

[tool.poetry.dev-dependencies]
pgcli = "^2.1"
pytest = "^5.0"
bump2version = "^0.5.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
