[tool.poetry]
name = "sqlalchemist"
version = "0.2.0"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
SQLalchemy = "^1.4"
alembic = "^1.0"
ruyaml = "^0.20"
munch = "^2.5.0"

[tool.poetry.dev-dependencies]
pgcli = "*"
pytest = "^6"
bump2version = "^1.0"
black = "^21.11b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
